--- a/Lara/larissa business.html
+++ b/Lara/larissa business.html
@@ -170,12 +170,12 @@ auction, you decide! </li>
     <!-- Testimonials -->
     <h3 class="w3-padding-24 w3-text-light-grey">My Reputation</h3>  
     <img src="c.jpeg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
-    <p><span class="w3-large w3-margin-right">https://www.instagram.com/larissa_evtimova/?hl=en</p>
+    <p><span class="w3-large w3-margin-right"></p>
     <br>
 
     
     <img src="n.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px"><br>
-    <p><span class="w3-large w3-margin-right">Rhttps://www.facebook.com/larissa.evtimova97</p>
+    <p><span class="w3-large w3-margin-right"></p>
     
   <!-- End About Section -->
   </div>
