--- a/Lara/larissa business.html
+++ b/Lara/larissa business.html
@@ -49,7 +49,7 @@
 <div class="w3-padding-large" id="main">
   <!-- Header/Home -->
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
-    <h1 class="w3-jumbo"><span class="w3-hide-small">I'm</span> Lara Peugot.</h1>
+    <h1 class="w3-jumbo"><span class="w3-hide-small">I'm</span> Lara Pugeot.</h1>
     <p>Agent Provocateur.</p>
     <img src="6.jpeg" alt="boy" class="w3-image" width="992" height="1108">
   </header>
