--- a/Lara/larissa business.html
+++ b/Lara/larissa business.html
@@ -58,14 +58,11 @@
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
     <h2 class="w3-text-light-grey">Lara</h2>
     <hr style="width:200px" class="w3-opacity">
-    <p> I'm a very naughty Bularinan that loves to have fun.
+    <p> I'm a very naughty Bulgarian that loves to have fun.
      I can supply 🩲.Used panties, socks, stockings, tights 👙.Bras, underwear sets, sexy outfits,
-Gym wear, PJ’s.
-
-and will be heavily scented with my
-musky juice. Longer wear and special
+Gym wear, PJ’s that will be heavily scented with my musky juice. Longer wear and special
 requests available for an additional fee.
-👠Old shoes, boots, slippers, trainers Nothing excites me more 💦than the thought of you getting off on something I have sold or put together for you
+👠Old shoes, boots, slippers, trainers are available. Nothing excites me more 💦than the thought of you getting off on something I have sold or put together for you
 I want you to be 💯% satisfied
 I want you to keep coming back for more.
     </p>
@@ -107,7 +104,7 @@ packages.<p>
       </div>
       <div class="w3-quarter w3-section">
         <span class="w3-xlarge">2</span><br>
-        Regular Clints
+        Regular Clients
       </div>
       <div class="w3-quarter w3-section">
         <span class="w3-xlarge">89+</span><br>
@@ -149,7 +146,7 @@ auction, you decide! £5 written, </li>
             <li class="w3-padding-16">Used panties, socks, stockings, tights</li>
           <li class="w3-padding-16">🍭 Pussy pops, ass pops, bodily fluids.
 Smell my scent, taste my juices £5</li>
-          <li class="w3-padding-16">Sissy boxes prepared for you from £30</li>
+          <li class="w3-padding-16">Sissy boxes prepared for you</li>
           <li class="w3-padding-16">🍆 Cock ratings. Show me your cock pics
 (only by agreement) and I will give an
 honest, detailed review. Praise or destr-
